# openvpn-desk

./: .gitignore  LICENSE  README.md  pyproject.toml
gui/: app.py  backend.py  style.css
helper/: helper.py  in.openvpndesk.helper.policy  install.sh  policy.xml
openvpn_desk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
openvpndesk/: app.py
