[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openvpn-desk"
version = "1.0.0"
description = "Simple OpenVPN GUI client for Linux"
authors = [{ name = "Yanger Longkumer" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyGObject"
]

[project.scripts]
openvpn-desk = "openvpndesk.app:main"

[tool.setuptools.packages.find]
include = ["openvpndesk*"]
